--- a/index.html
+++ b/index.html
@@ -1,69 +1,200 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | ERP ABP Profissional</title>
-    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/core/conexao.js"></script>
-    <script src="js/core/auth.js"></script>
-    <style>
-        :root { --primary: #2563eb; --dark: #1e293b; --error: #ef4444; }
-        body { font-family: 'Inter', sans-serif; background-color: #f1f5f9; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; }
-        .login-card { background: white; padding: 2.5rem; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); width: 100%; max-width: 380px; }
-        .form-group { margin-bottom: 1.2rem; position: relative; }
-        label { display: block; margin-bottom: 0.5rem; color: #475569; font-size: 0.9rem; }
-        input { width: 100%; padding: 0.75rem; border: 1px solid #cbd5e1; border-radius: 6px; box-sizing: border-box; }
-        .btn-eye { position: absolute; right: 12px; top: 38px; background: none; border: none; cursor: pointer; color: #64748b; font-size: 1.2rem; }
-        button#btn-login { width: 100%; padding: 0.75rem; background: var(--primary); color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600; margin-top: 1rem; }
-        .error-box { background: #fee2e2; color: var(--error); padding: 0.75rem; border-radius: 6px; font-size: 0.85rem; margin-bottom: 1rem; display: none; border: 1px solid #fecaca; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ERP ABP - Cadastro</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f7fa;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .container {
+      background: white;
+      padding: 2.5rem 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 420px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+      margin-bottom: 1.5rem;
+    }
+    .form-group {
+      margin-bottom: 1.2rem;
+      position: relative;
+    }
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      color: #34495e;
+      font-weight: 500;
+    }
+    input {
+      width: 100%;
+      padding: 0.9rem;
+      border: 1px solid #d1d9e0;
+      border-radius: 6px;
+      font-size: 1rem;
+      box-sizing: border-box;
+    }
+    input:focus {
+      outline: none;
+      border-color: #3498db;
+      box-shadow: 0 0 0 3px rgba(52,152,219,0.15);
+    }
+    .password-wrapper {
+      position: relative;
+    }
+    .toggle-password {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 1.3rem;
+      color: #7f8c8d;
+      user-select: none;
+    }
+    button {
+      width: 100%;
+      padding: 1rem;
+      background: #3498db;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      margin-top: 1rem;
+      transition: background 0.2s;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+    button:disabled {
+      background: #95a5a6;
+      cursor: not-allowed;
+    }
+    #message {
+      margin-top: 1.2rem;
+      text-align: center;
+      font-weight: 500;
+    }
+    .success { color: #27ae60; }
+    .error   { color: #e74c3c; }
+    .link {
+      text-align: center;
+      margin-top: 1.5rem;
+      color: #3498db;
+      cursor: pointer;
+    }
+    .link:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
-    <div class="login-card">
-        <div class="login-header" style="text-align:center; margin-bottom:20px;">
-            <h1 style="font-size: 1.5rem; color: var(--dark);">ERP ABP</h1>
-        </div>
-        <div id="error-msg" class="error-box"></div>
-        <form id="login-form">
-            <div class="form-group">
-                <label>E-mail</label>
-                <input type="email" id="email" required placeholder="seu@email.com">
-            </div>
-            <div class="form-group">
-                <label>Senha</label>
-                <input type="password" id="password" required placeholder="••••••••">
-                <button type="button" class="btn-eye" id="togglePassword">👁️</button>
-            </div>
-            <button type="submit" id="btn-login">Entrar no Sistema</button>
-        </form>
-    </div>
-    <script>
-        (function() {
-            const passInput = document.getElementById('password');
-            const btnEye = document.getElementById('togglePassword');
-            btnEye.addEventListener('click', () => {
-                const isPass = passInput.type === 'password';
-                passInput.type = isPass ? 'text' : 'password';
-                btnEye.innerText = isPass ? '🙈' : '👁️';
-            });
 
-            document.getElementById('login-form').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const btn = document.getElementById('btn-login');
-                btn.disabled = true;
-                const result = await window.AppAuth.login(document.getElementById('email').value, passInput.value);
-                if (result.success) {
-                    window.location.href = 'dashboard.html';
-                } else {
-                    const errEl = document.getElementById('error-msg');
-                    errEl.innerText = result.message;
-                    errEl.style.display = 'block';
-                    btn.disabled = false;
-                }
-            });
-        })();
-    </script>
+<div class="container">
+  <h1>ERP ABP - Cadastro</h1>
+
+  <form id="cadastroForm">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="seuemail@exemplo.com" required autocomplete="email"/>
+    </div>
+
+    <div class="form-group">
+      <label for="password">Senha</label>
+      <div class="password-wrapper">
+        <input type="password" id="password" placeholder="Mínimo 6 caracteres" required autocomplete="new-password"/>
+        <span class="toggle-password" id="togglePassword">👁️</span>
+      </div>
+    </div>
+
+    <button type="submit" id="btnCadastrar">Cadastrar</button>
+  </form>
+
+  <div id="message"></div>
+
+  <div class="link" id="goToLogin">Já tem conta? Faça login</div>
+</div>
+
+<script>
+  // Configuração do Supabase (substitua se mudar o projeto)
+  const supabaseUrl = 'https://ueaprmzmlkfrbmibdnro.supabase.co';
+  const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlYXBybXptbGtmcmJtaWJkbnJvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzNTg3OTQsImV4cCI6MjA4NDkzNDc5NH0.Nl_W2v3JN_uQLfz4eAqV3goDVFernnGi2A7L9kszX3w';
+
+  const supabase = Supabase.createClient(supabaseUrl, supabaseAnonKey);
+
+  // Mostrar/esconder senha
+  const togglePassword = document.getElementById('togglePassword');
+  const passwordInput = document.getElementById('password');
+
+  togglePassword.addEventListener('click', () => {
+    const type = passwordInput.type === 'password' ? 'text' : 'password';
+    passwordInput.type = type;
+    togglePassword.textContent = type === 'password' ? '👁️' : '🙈';
+  });
+
+  // Formulário de cadastro
+  document.getElementById('cadastroForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value;
+    const messageDiv = document.getElementById('message');
+    const btn = document.getElementById('btnCadastrar');
+
+    btn.disabled = true;
+    messageDiv.textContent = '';
+    messageDiv.className = '';
+
+    if (password.length < 6) {
+      messageDiv.textContent = 'A senha deve ter pelo menos 6 caracteres.';
+      messageDiv.className = 'error';
+      btn.disabled = false;
+      return;
+    }
+
+    const { data, error } = await supabase.auth.signUp({
+      email,
+      password,
+      options: {
+        data: { nome: email.split('@')[0] } // opcional: metadados iniciais
+      }
+    });
+
+    if (error) {
+      messageDiv.textContent = error.message.includes('already registered')
+        ? 'Este email já está cadastrado.'
+        : 'Erro ao cadastrar: ' + error.message;
+      messageDiv.className = 'error';
+    } else {
+      messageDiv.textContent = 'Cadastro realizado! Verifique seu email para confirmar (se ativado).';
+      messageDiv.className = 'success';
+
+      // Opcional: redireciona para login após 3 segundos
+      setTimeout(() => {
+        window.location.href = 'login.html'; // crie essa página depois
+      }, 4000);
+    }
+
+    btn.disabled = false;
+  });
+
+  // Link para login (crie login.html depois)
+  document.getElementById('goToLogin').addEventListener('click', () => {
+    window.location.href = 'login.html';
+  });
+</script>
+
 </body>
 </html>
