--- a/index.html
+++ b/index.html
@@ -129,81 +129,84 @@
 </div>
 
 <script>
-  // Configuração Supabase (global, sem redeclaração)
-  const supabaseUrl = 'https://ueaprmzmlkfrbmibdnro.supabase.co';
-  const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlYXBybXptbGtmcmJtaWJkbnJvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzNTg3OTQsImV4cCI6MjA4NDkzNDc5NH0.Nl_W2v3JN_uQLfz4eAqV3goDVFernnGi2A7L9kszX3w';
+// Configuração Supabase
+const SUPABASE_URL = 'https://ueaprmzmlkfrbmibdnro.supabase.co';
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlYXBybXptbGtmcmJtaWJkbnJvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzNTg3OTQsImV4cCI6MjA4NDkzNDc5NH0.Nl_W2v3JN_uQLfz4eAqV3goDVFernnGi2A7L9kszX3w';
 
-  // Cria o cliente uma única vez
-  const supabase = Supabase.createClient(supabaseUrl, supabaseAnonKey);
+// Cria o cliente Supabase (sem redeclarar variável global)
+const supabaseClient = Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  // Mostrar/esconder senha
-  const togglePassword = document.getElementById('togglePassword');
-  const passwordInput = document.getElementById('password');
+// Toggle senha
+const toggleBtn = document.getElementById('togglePassword');
+const senhaInput = document.getElementById('password');
 
-  if (togglePassword && passwordInput) {
-    togglePassword.addEventListener('click', () => {
-      const type = passwordInput.type === 'password' ? 'text' : 'password';
-      passwordInput.type = type;
-      togglePassword.textContent = type === 'password' ? '👁️' : '🙈';
-    });
-  }
-
-  // Formulário de cadastro
-  const form = document.getElementById('cadastroForm');
-  const btn = document.getElementById('btnCadastrar');
-  const messageDiv = document.getElementById('message');
-
-  if (form) {
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-
-      btn.disabled = true;
-      messageDiv.textContent = 'Processando...';
-      messageDiv.className = '';
-
-      if (!email || password.length < 6) {
-        messageDiv.textContent = 'Preencha email válido e senha com pelo menos 6 caracteres.';
-        messageDiv.className = 'error';
-        btn.disabled = false;
-        return;
-      }
-
-      try {
-        const { data, error } = await supabase.auth.signUp({
-          email,
-          password,
-          options: {
-            data: { nome: email.split('@')[0] }
-          }
-        });
-
-        if (error) throw error;
-
-        messageDiv.textContent = 'Cadastro realizado! Verifique seu email para confirmar (se necessário).';
-        messageDiv.className = 'success';
-
-        // Opcional: redireciona após 4 segundos
-        setTimeout(() => {
-          window.location.href = 'login.html'; // Crie essa página depois
-        }, 4000);
-      } catch (err) {
-        messageDiv.textContent = err.message.includes('already registered')
-          ? 'Este email já está cadastrado.'
-          : 'Erro: ' + err.message;
-        messageDiv.className = 'error';
-      } finally {
-        btn.disabled = false;
-      }
-    });
-  }
-
-  // Link para login
-  document.getElementById('goToLogin')?.addEventListener('click', () => {
-    window.location.href = 'login.html';
+if (toggleBtn && senhaInput) {
+  toggleBtn.addEventListener('click', function() {
+    const tipoAtual = senhaInput.type;
+    senhaInput.type = tipoAtual === 'password' ? 'text' : 'password';
+    toggleBtn.textContent = tipoAtual === 'password' ? '🙈' : '👁️';
   });
+}
+
+// Formulário
+const formCadastro = document.getElementById('cadastroForm');
+const btnCadastrar = document.getElementById('btnCadastrar');
+const divMensagem = document.getElementById('message');
+
+if (formCadastro) {
+  formCadastro.addEventListener('submit', async function(e) {
+    e.preventDefault();
+
+    const email = document.getElementById('email').value.trim();
+    const senha = document.getElementById('password').value;
+
+    btnCadastrar.disabled = true;
+    divMensagem.textContent = 'Processando cadastro...';
+    divMensagem.className = '';
+
+    if (!email || senha.length < 6) {
+      divMensagem.textContent = 'Preencha email válido e senha com pelo menos 6 caracteres.';
+      divMensagem.className = 'error';
+      btnCadastrar.disabled = false;
+      return;
+    }
+
+    try {
+      const { data, error } = await supabaseClient.auth.signUp({
+        email: email,
+        password: senha,
+        options: {
+          data: { nome: email.split('@')[0] || 'Usuário' }
+        }
+      });
+
+      if (error) throw error;
+
+      divMensagem.textContent = 'Cadastro realizado com sucesso! Verifique seu email para confirmar.';
+      divMensagem.className = 'success';
+
+      setTimeout(() => {
+        window.location.href = 'login.html'; // ou outra página
+      }, 4000);
+    } catch (err) {
+      let msg = 'Erro ao cadastrar. Tente novamente.';
+      if (err.message.includes('already registered')) {
+        msg = 'Este email já está cadastrado.';
+      } else if (err.message) {
+        msg = err.message;
+      }
+      divMensagem.textContent = msg;
+      divMensagem.className = 'error';
+    } finally {
+      btnCadastrar.disabled = false;
+    }
+  });
+}
+
+// Link para login
+document.getElementById('goToLogin')?.addEventListener('click', function() {
+  window.location.href = 'login.html';
+});
 </script>
 
 </body>
