--- a/assets/entidades/usuarios.html
+++ b/assets/entidades/usuarios.html
@@ -9,21 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 
-    <script>
-    const SUPABASE_URL = 'https://luanoblszirvzqidhecr.supabase.co';
-    const SUPABASE_KEY = 'sb_publishable_jqhEnUuuEF4-zxKbgupuTQ_n-7h-qTp'; //Publishable key
-    const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    async function validarAcesso() {
-        const { data: { session } } = await _supabase.auth.getSession();
-        if (!session) {
-            const pathPrefix = window.location.pathname.includes('/pages/') ? '../' : '';
-            window.location.href = pathPrefix + 'login.html';
-        }
-        return session;
-    }
-    validarAcesso();
-    </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -293,143 +279,79 @@ td { padding: 15px; border-top: 1px solid #f1f5f9; }
 </div>
 
 <script>
+// Configurações do Supabase
+const SUPABASE_URL = 'https://luanoblszirvzqidhecr.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_jqhEnUuuEF4-zxKbgupuTQ_n-7h-qTp';
+const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
 let currentData = [];
 
-// Função para mostrar/esconder senha
-function togglePasswordVisibility() {
-    const passwordInput = document.getElementById('senha_acesso');
-    const toggleIcon = document.getElementById('togglePassword');
-    if (passwordInput.type === 'password') {
-        passwordInput.type = 'text';
-        toggleIcon.classList.replace('fa-eye', 'fa-eye-slash');
-    } else {
-        passwordInput.type = 'password';
-        toggleIcon.classList.replace('fa-eye-slash', 'fa-eye');
+/**
+ * 1. INICIALIZAÇÃO E ACESSO
+
+async function validarAcesso() {
+    const { data: { session } } = await _supabase.auth.getSession();
+    if (!session) {
+        const pathPrefix = window.location.pathname.includes('/pages/') ? '../' : '';
+        window.location.href = pathPrefix + 'login.html';
     }
+    return session;
+} */
+
+// Injeção da Navbar via JS (Regra de Arquitetura)
+function renderNavbar() {
+    const navHTML = `
+    <div class="navbar">
+        <div style="font-weight: bold; color: #0f172a;">ERP ABP - USUÁRIOS</div>
+        <div class="nav-buttons">
+            <select id="lang-switcher" style="padding: 5px; border-radius: 4px; border: 1px solid #ddd;">
+                <option value="pt">Português</option>
+                <option value="es">Español</option>
+                <option value="en">English</option>
+            </select>
+            <a href="index.html" class="btn-nav-back"><i class="fas fa-home"></i> Voltar</a>
+            <button class="btn-logout-nav" onclick="sairDaConta()"><i class="fas fa-sign-out-alt"></i> Sair</button>
+        </div>
+    </div>`;
+    document.body.insertAdjacentHTML('afterbegin', navHTML);
 }
 
-async function sairDaConta() {
-    if(confirm("Deseja sair?")) {
-        await _supabase.auth.signOut();
-        window.location.href = 'login.html';
-    }
-}
-
-async function buscaCEP() {
-    const cep = document.getElementById('cep').value.replace(/\D/g, '');
-    if (cep.length === 8) {
-        try {
-            const res = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
-            const data = await res.json();
-            if (!data.erro) {
-                document.getElementById('logradouro').value = data.logradouro;
-                document.getElementById('bairro').value = data.bairro;
-                document.getElementById('cidade').value = data.localidade;
-                document.getElementById('estado').value = data.uf;
-            }
-        } catch { console.error("Erro CEP"); }
-    }
-}
-
+/**
+ * 2. GESTÃO DE DADOS (CRUD)
+ */
 async function loadEntities() {
+    // Exemplo de invocação de serviço externo conforme sua regra
+    try {
+        const res = await fetch('servicos.json');
+        const servicos = await res.json();
+        console.log("Serviços disponíveis:", servicos);
+    } catch (e) { console.warn("Arquivo servicos.json não encontrado."); }
+
     const { data, error } = await _supabase.from('usuarios').select('*').order('nome_completo');
-    if (error) return;
+    if (error) {
+        console.error("Erro ao carregar:", error.message);
+        return;
+    }
     currentData = data || [];
     renderTable(currentData);
 }
 
-function renderTable(data) {
-    const list = document.getElementById('entities-list');
-    list.innerHTML = data.map(c => {
-        const wppLink = c.telefone && c.telefone.includes('http') ? c.telefone : `https://wa.me/${c.telefone ? c.telefone.replace(/\D/g, '') : ''}`;
-        const mailLink = c.email ? `https://mail.google.com/mail/?view=cm&fs=1&to=${c.email}` : '#';
-
-        return `
-        <tr>
-            <td><b>${c.nome_completo}</b><br><small>${c.relacionamento.toUpperCase()}</small></td>
-            <td>${c.telefone || 'Sem contato'}<br><small>${c.email || ''}</small></td>
-            <td>${c.acesso}<br><small style="color:${c.status === 'ativo' ? 'green' : 'red'}">${c.status}</small></td>
-            <td>
-                <button class="btn-edit" title="Editar" onclick="editFull('${c.id}')"><i class="fas fa-edit"></i></button>
-                <button class="btn-del" title="Excluir" onclick="deleteEntity('${c.id}')"><i class="fas fa-trash"></i></button>
-                <a href="${wppLink}" target="_blank" class="btn-wpp" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                <a href="${mailLink}" target="_blank" class="btn-mail" title="Gmail"><i class="fas fa-envelope"></i></a>
-            </td>
-        </tr>
-    `}).join('') || '<tr><td colspan="4" style="text-align:center">Nenhuma entidade encontrada.</td></tr>';
-}
-
-function filtrarTabela() {
-    const filtro = document.getElementById("inputBusca").value.toLowerCase();
-    const linhas = document.getElementById("entities-list").getElementsByTagName("tr");
-    for (let i = 0; i < linhas.length; i++) {
-        const colunaNome = linhas[i].getElementsByTagName("td")[0];
-        if (colunaNome) {
-            const txt = colunaNome.textContent || colunaNome.innerText;
-            linhas[i].style.display = txt.toLowerCase().includes(filtro) ? "" : "none";
-        }
-    }
-}
-
-function exportarPDFListagem() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    doc.text("Listagem de Ususarios - ERP ABP", 14, 15);
-    const rows = [];
-    document.querySelectorAll("#entities-list tr").forEach(tr => {
-        if (tr.style.display !== "none") {
-            const cells = tr.querySelectorAll("td");
-            if(cells.length > 0) rows.push([cells[0].innerText.replace('\n', ' - '), cells[1].innerText.replace('\n', ' - '), cells[2].innerText.replace('\n', ' - ')]);
-        }
-    });
-    doc.autoTable({ head: [['Entidade / Tipo', 'Contato', 'Acesso / Status']], body: rows, startY: 20 });
-    doc.save("listagem_usuarios.pdf");
-}
-
-function exportarPDFFichaCompleta() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-    let y = 20;
-    const filtro = document.getElementById("inputBusca").value.toLowerCase();
-    const dadosFiltrados = currentData.filter(c => c.nome_completo.toLowerCase().includes(filtro));
-    doc.setFontSize(16);
-    doc.text("FICHAS DETALHADAS DE USUARIOS", 14, y);
-    y += 10;
-    dadosFiltrados.forEach((c, index) => {
-        if (y > 250) { doc.addPage(); y = 20; }
-        doc.setFontSize(11);
-        doc.setFont(undefined, 'bold');
-        doc.text(`${index + 1}. ${c.nome_completo.toUpperCase()}`, 14, y);
-        y += 6;
-        doc.setFontSize(9);
-        doc.setFont(undefined, 'normal');
-        doc.text(`Doc: ${c.cpf || 'N/A'} | Nasc: ${c.data_nascimento || 'N/A'}`, 14, y);
-        y += 4;
-        doc.text(`Email: ${c.email || 'N/A'} | Tel: ${c.telefone || 'N/A'}`, 14, y);
-        y += 4;
-        doc.text(`End: ${c.logradouro || ''}, ${c.numero || ''} - ${c.bairro || ''}, ${c.cidade || ''}/${c.estado || ''}`, 14, y);
-        y += 4;
-        doc.text(`Tipo: ${c.relacionamento} | Acesso: ${c.acesso} | Status: ${c.status}`, 14, y);
-        y += 4;
-        doc.text(`Obs: ${c.observacoes || 'Nenhuma'}`, 14, y);
-        y += 5;
-        doc.line(14, y, 196, y);
-        y += 8;
-    });
-    doc.save("fichas_usuarios.pdf");
-}
-
 async function handleSave() {
-    const { data: { user } } = await _supabase.auth.getUser();
     const id = document.getElementById('edit-id').value;
+    const email = document.getElementById('email').value;
+    const senha = document.getElementById('senha_acesso').value;
+    const nome = document.getElementById('nome_completo').value;
+
+    if (!nome || !email) return alert("Nome e E-mail são obrigatórios");
+
+    // Coleta de dados do formulário (IDs mapeados com a tabela)
     const dados = {
-        usuario_id: user.id,
-        nome_completo: document.getElementById('nome_completo').value,
+        nome_completo: nome,
         cpf: document.getElementById('cpf').value,
         data_nascimento: document.getElementById('data_nascimento').value || null,
-        email: document.getElementById('email').value,
+        email: email,
         telefone: document.getElementById('telefone').value,
-        senha_acesso: document.getElementById('senha_acesso').value,
+        senha_acesso: senha, 
         acesso: document.getElementById('acesso').value,
         relacionamento: document.getElementById('relacionamento').value,
         status: document.getElementById('status').value,
@@ -443,23 +365,121 @@ async function handleSave() {
         estado: document.getElementById('estado').value,
         arquivos_url: document.getElementById('arquivos_url').value ? [document.getElementById('arquivos_url').value] : []
     };
-    if (!dados.nome_completo) return alert("Nome é obrigatório");
-    const { error } = id ? await _supabase.from('usuarios').update(dados).eq('id', id) : await _supabase.from('usuarios').insert([dados]);
-    if (error) alert("Erro: " + error.message); else { resetForm(); loadEntities(); }
+
+    if (id) {
+        // MODO EDIÇÃO
+        const { error } = await _supabase.from('usuarios').update(dados).eq('id', id);
+        if (error) alert("Erro ao atualizar: " + error.message);
+        else { alert("Atualizado com sucesso!"); resetForm(); loadEntities(); }
+    } else {
+        // MODO NOVO CADASTRO (Cria no Auth e o Trigger cria no Public)
+        if (!senha) return alert("Defina uma senha para o primeiro acesso.");
+        
+        const { data: authData, error: authError } = await _supabase.auth.signUp({
+            email: email,
+            password: senha,
+            options: { data: { nome_completo: nome } }
+        });
+
+        if (authError) {
+            alert("Erro no cadastro: " + authError.message);
+        } else {
+            // O Trigger já criou a linha, agora fazemos o update com os dados extras (CPF, Endereço, etc)
+            const { error: updateError } = await _supabase.from('usuarios').update(dados).eq('id', authData.user.id);
+            if (updateError) console.error("Erro ao complementar perfil:", updateError.message);
+            
+            alert("Usuário cadastrado com sucesso!");
+            resetForm();
+            loadEntities();
+        }
+    }
+}
+
+async function deleteEntity(id) {
+    if (confirm("Deseja excluir definitivamente este usuário do banco de dados?")) {
+        const { error } = await _supabase.from('usuarios').delete().eq('id', id);
+        if (error) alert("Erro ao excluir: " + error.message);
+        else loadEntities();
+    }
+}
+
+/**
+ * 3. INTERFACE E UI
+ */
+function renderTable(data) {
+    const list = document.getElementById('entities-list');
+    list.innerHTML = data.map(c => {
+        const wppLink = c.telefone ? `https://wa.me/${c.telefone.replace(/\D/g, '')}` : '#';
+        const mailLink = c.email ? `mailto:${c.email}` : '#';
+
+        return `
+        <tr>
+            <td><b>${c.nome_completo}</b><br><small>${c.relacionamento.toUpperCase()}</small></td>
+            <td>${c.telefone || '---'}<br><small>${c.email || ''}</small></td>
+            <td>${c.acesso}<br><small style="color:${c.status === 'ativo' ? 'green' : 'red'}">${c.status}</small></td>
+            <td>
+                <button class="btn-edit" title="Editar" onclick="editFull('${c.id}')"><i class="fas fa-edit"></i></button>
+                <button class="btn-del" title="Excluir" onclick="deleteEntity('${c.id}')"><i class="fas fa-trash"></i></button>
+                <a href="${wppLink}" target="_blank" class="btn-wpp"><i class="fab fa-whatsapp"></i></a>
+                <a href="${mailLink}" class="btn-mail"><i class="fas fa-envelope"></i></a>
+            </td>
+        </tr>`;
+    }).join('') || '<tr><td colspan="4" style="text-align:center">Nenhum registro encontrado.</td></tr>';
+}
+
+function filtrarTabela() {
+    const filtro = document.getElementById("inputBusca").value.toLowerCase();
+    const dadosFiltrados = currentData.filter(u => 
+        u.nome_completo.toLowerCase().includes(filtro) || 
+        (u.cpf && u.cpf.includes(filtro)) ||
+        (u.email && u.email.toLowerCase().includes(filtro))
+    );
+    renderTable(dadosFiltrados);
 }
 
 async function editFull(id) {
     const { data, error } = await _supabase.from('usuarios').select('*').eq('id', id).single();
     if (error || !data) return;
+
+    // Preenchimento automático por ID de campo
     Object.keys(data).forEach(k => {
         const el = document.getElementById(k);
         if (el) el.value = (k === 'arquivos_url' && data[k]) ? data[k][0] : (data[k] || '');
     });
+
     document.getElementById('edit-id').value = data.id;
-    document.getElementById('form-title').innerText = "Editando Entidade";
-    document.getElementById('btn-save').innerText = "Atualizar Entidade";
+    document.getElementById('form-title').innerText = "Editando Usuário";
+    document.getElementById('btn-save').innerText = "Atualizar Dados";
     document.getElementById('btn-cancel').style.display = "block";
     window.scrollTo({ top: 0, behavior: 'smooth' });
+}
+
+/**
+ * 4. UTILITÁRIOS
+ */
+async function buscaCEP() {
+    const cep = document.getElementById('cep').value.replace(/\D/g, '');
+    if (cep.length === 8) {
+        try {
+            const res = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+            const data = await res.json();
+            if (!data.erro) {
+                document.getElementById('logradouro').value = data.logradouro;
+                document.getElementById('bairro').value = data.bairro;
+                document.getElementById('cidade').value = data.localidade;
+                document.getElementById('estado').value = data.uf;
+            }
+        } catch (e) { console.error("Erro ao buscar CEP"); }
+    }
+}
+
+function togglePasswordVisibility() {
+    const pass = document.getElementById('senha_acesso');
+    const icon = document.getElementById('togglePassword');
+    const isPass = pass.type === 'password';
+    pass.type = isPass ? 'text' : 'password';
+    icon.classList.toggle('fa-eye');
+    icon.classList.toggle('fa-eye-slash');
 }
 
 function resetForm() {
@@ -474,14 +494,19 @@ function resetForm() {
     document.getElementById('btn-cancel').style.display = "none";
 }
 
-async function deleteEntity(id) {
-    if (confirm("Excluir definitivamente?")) {
-        await _supabase.from('usuarios').delete().eq('id', id);
-        loadEntities();
+async function sairDaConta() {
+    if(confirm("Deseja encerrar a sessão?")) {
+        await _supabase.auth.signOut();
+        window.location.href = 'login.html';
     }
 }
 
-document.addEventListener('DOMContentLoaded', loadEntities);
+// Inicialização Geral
+document.addEventListener('DOMContentLoaded', () => {
+    validarAcesso();
+    renderNavbar();
+    loadEntities();
+});
 </script>
 </body>
 </html>
