--- a/assets/app/listar_tarefas.html
+++ b/assets/app/listar_tarefas.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
 <html class="light" lang="pt-BR">
 <head>
-    <meta charset="utf-8"/><title>Lista de Tarefas - ERP ABP</title>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Cadastro de Tarefa - ERP ABP</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase_config.js"></script>    
     <script src="verificar_login.js"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1" rel="stylesheet"/>
     <script>
-        tailwind.config = { darkMode: "class", theme: { extend: { colors: { "primary": "#137fec", "background-dark": "#101922" } } } }
+        tailwind.config = { theme: { extend: { colors: { "primary": "#137fec" } } } }
     </script>
 </head>
-<body class="bg-[#f6f7f8] dark:bg-background-dark min-h-screen">
-    <header class="p-4 bg-white dark:bg-slate-900 shadow-sm sticky top-0 z-10">
-        <div class="max-w-2xl mx-auto flex items-center justify-between">
-            <h1 class="text-2xl font-black text-slate-800 dark:text-white">Minhas Tarefas</h1>
-            <button onclick="window.location.href='https://aristidesbp.github.io/assets/app/cadastrar_tarefas.html'" class="p-2 bg-primary text-white rounded-xl">
-                <span class="material-symbols-outlined">add</span>
-            </button>
-        </div>
+<body class="bg-[#f6f7f8] min-h-screen">
+    <header class="p-4 bg-white border-b flex items-center justify-between">
+        <button onclick="window.location.href='listar_tarefas.html'" class="text-primary">
+            <span class="material-symbols-outlined">arrow_back_ios</span>
+        </button>
+        <h1 class="font-bold text-lg">Cadastro de Tarefa</h1>
+        <div class="w-6"></div>
     </header>
 
-    <main class="p-4 max-w-2xl mx-auto pb-32">
-        <div id="tasks-list" class="space-y-4">
-            <div class="flex justify-center py-20"><div class="animate-spin rounded-full h-8 w-8 border-b-2 border-primary"></div></div>
+    <main class="p-4 space-y-6">
+        <input type="hidden" id="task-id">
+        
+        <div>
+            <label class="block text-sm font-medium text-gray-700">Título da Tarefa</label>
+            <input type="text" id="title" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring-primary">
         </div>
+
+        <div>
+            <label class="block text-sm font-medium text-gray-700">Entidade</label>
+            <input type="text" id="entidade" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring-primary">
+        </div>
+
+        <div>
+            <label class="block text-sm font-medium text-gray-700">Tarefa</label>
+            <textarea id="content" rows="3" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring-primary"></textarea>
+        </div>
+
+        <div>
+            <label class="block text-sm font-medium text-gray-700">Status</label>
+            <select id="status" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring-primary">
+                <option value="pendente">Pendente</option>
+                <option value="em_andamento">Em Andamento</option>
+                <option value="concluida">Concluída</option>
+            </select>
+        </div>
+
+        <div>
+            <label class="block text-sm font-medium text-gray-700">Observação</label>
+            <textarea id="observacao" rows="3" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-primary focus:ring-primary"></textarea>
+        </div>
+
+        <button id="btn-save" onclick="saveTask()" class="w-full py-3 px-4 border border-transparent rounded-md shadow-sm text-white bg-primary hover:bg-blue-700 font-bold">
+            Salvar Tarefa
+        </button>
     </main>
 
-    <script src="tarefas/listar_tarefas.js"></script>
-    <script src="tarefas/deletar_tarefas.js"></script>
+    <script src="tarefas/limpar_tarefas.js"></script>
+    <script src="tarefas/salvar_tarefas.js"></script>
     <script src="tarefas/editar_tarefas.js"></script>
     <script src="navbar.js"></script>
 </body>
 </html>
-
